--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Starz</title>
-          <link rel="stylesheet" href="style.css">
 
-    </head>
-    <body>
-        <canvas id="canvas"></canvas>
-    </body>
-    <script src="script.js"></script>
+<head>
+	<title>Starz</title>
+	<link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+	<canvas id="canvas"></canvas>
+</body>
+<script src="script.js">
+</script>
 
 </html>
