--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
 	<title>Starz</title>
 	<link rel="stylesheet" href="style.css">
-
+	<link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/kKF1z5L/vecteezy-rainbow-star-1189159.png" />
 </head>
 
 <body>
 	<canvas id="canvas"></canvas>
 </body>
 <script src="script.js">
+
 </script>
 
 </html>
